Fixing z-indexes and tabs layout

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,11 @@ header a img {
 	height: 160px;
 }
 
+.nav-section:focus {
+	border: 2px solid white;
+	background-color: grey;
+}
+
 .nav-section > p {
     line-height: 50px;
     height: 120px;
@@ -295,7 +300,7 @@ header a img {
 	width: 70%;
 	margin: 0 auto;
 	text-align: center;
-	min-width: 123px;
+	min-width: 146px;
 }
 
 .tab input[type=radio] {
@@ -334,11 +339,11 @@ input[type=radio]:checked ~ label ~ .content {
 .reports {
 	position: absolute;
 	left: 20px;
-	top: 50px;
+	top: 100px;
 	display: none;
-	z-index: 10;
+	z-index: 2;
 	background-color: white;
-	width: 90%;
+	width: 95%;
 	height: 300px;
 	padding: 10px;
 	border: 1px solid #d9d9d9;
@@ -359,7 +364,7 @@ label.app-button {
 	width: 30px;
 	height: 30px;
 	display: block;	
-	z-index: 10;
+	z-index: 2;
 	border: 1px solid #d9d9d9;
 	border-radius: 5px;
 	text-decoration: none;
